--- a/themes/butterfly/source/css/_third-party/My.css
+++ b/themes/butterfly/source/css/_third-party/My.css
@@ -33,7 +33,11 @@
   background-color: #49b1f5;
 }
 
-
+.postImgHover img, #pagination .prev-post img, #pagination .next-post img, .relatedPosts > .relatedPosts-list > div img{
+background-image: url(https://s1.328888.xyz/2022/08/05/jRvAp.jpg);
+background-size: 100% 100%;
+opacity: 0.7!important;
+}
 /* 文章页背景 */
 .layout_post>#post {
     /* 以下代表白色透明度为0.3 */
