--- a/themes/butterfly/source/css/_third-party/My.css
+++ b/themes/butterfly/source/css/_third-party/My.css
@@ -66,9 +66,9 @@ opacity: 0.7!important;
   background: transparent!important;
 }*/
 /* 页脚黑色透明玻璃效果移除 */
-#footer::before{
+#footer-wrap::before{
     background: transparent!important;
-  }
+  } 
 /* 头图透明 */
 #page-header{
   background: transparent!important;
@@ -84,7 +84,7 @@ opacity: 0.7!important;
 /*夜间模式伪类遮罩层透明*/
 [data-theme="dark"]
   #footer::before{
-      background: transparent!important;
+      background: rgba(0,0,0,0.7)!important;
     }
 [data-theme="dark"]
   #page-header::before{
@@ -122,7 +122,7 @@ div#category{
 
 /* 页脚透明渐变 */
 #footer {
-  background: rgba(255, 255, 255, 0.15);
+  background: rgba(255, 255, 255, 0.3)!important;
   color: #000;
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
@@ -130,7 +130,7 @@ div#category{
 }
 
 #footer::before {
-  background: rgba(255, 255, 255, 0.15);
+  background: rgba(255,255,255, 0.3);
 }
 
 #footer #footer-wrap {
