--- a/themes/butterfly/source/css/_third-party/My.css
+++ b/themes/butterfly/source/css/_third-party/My.css
@@ -34,7 +34,7 @@
 }
 
 .postImgHover img, #pagination .prev-post img, #pagination .next-post img, .relatedPosts > .relatedPosts-list > div img{
-background-image: url(http://aobayu.cn/images/diagram.jpg);
+background-image: url(https://image.aobayu.cn/images/diagram.jpg);
 background-size: 100% 100%;
 opacity: 0.7!important;
 }
